--- a/Game/package.json
+++ b/Game/package.json
@@ -11,8 +11,14 @@
 		"react-native": "0.48.4"
 	},
 	"devDependencies": {
+		"babel-eslint": "^8.0.1",
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
+		"eslint": "^4.8.0",
+		"eslint-config-airbnb": "^15.1.0",
+		"eslint-plugin-import": "^2.7.0",
+		"eslint-plugin-jsx-a11y": "^5.1.1",
+		"eslint-plugin-react": "^7.4.0",
 		"jest": "21.2.1",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
