--- a/Game/package.json
+++ b/Game/package.json
@@ -7,6 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@bhoos/rn-modal": "^1.0.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.4",
 		"react-redux": "^5.0.6",
