--- a/Game/package.json
+++ b/Game/package.json
@@ -12,6 +12,7 @@
 		"@bhoos/rn-modal": "^1.0.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.4",
+		"react-native-theming": "^1.0.8",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
 		"redux-thunk": "^2.2.0"
