--- a/Game/package.json
+++ b/Game/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@bhoos/rn-modal": "^1.0.0",
+		"prop-types": "^15.6.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.4",
 		"react-native-theming": "^1.0.8",
