--- a/Game/package.json
+++ b/Game/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"generate-app-icon": "./scripts/createLauncherIcons.js",
 		"link-local": "npm link ./app/actions && npm link ./app/assets && npm link ./app/components && npm link ./app/config && npm link ./app/screens && npm link ./app/services",
 		"prepare": "npm run link-local",
 		"test": "jest"
@@ -36,7 +37,8 @@
 		"eslint-plugin-jsx-a11y": "^5.1.1",
 		"eslint-plugin-react": "^7.4.0",
 		"jest": "21.2.1",
-		"react-test-renderer": "16.0.0-alpha.12"
+		"react-test-renderer": "16.0.0-alpha.12",
+		"svg2png": "^4.1.1"
 	},
 	"jest": {
 		"preset": "react-native"
